Updated home.css to fix alignment issues in header

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -520,7 +520,7 @@ footer {
     justify-content: center;
   }
   .home-header .header-contents .header-content-name {
-    width: 100%;
+    width: 90%;
   }
 
   .home-header .header-contents .header-content-name .header-name {
